<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="res_type" translatable="false">-</string>

    <string name="app_name">Basketball Scoreboard</string>
    <string name="title_activity_results">Results history</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_teams">Teams</string>

    <string name="text24" translatable="false">24</string>
    <string name="r" translatable="false">r</string>
    <string name="g" translatable="false">g</string>
    <string name="b" translatable="false">b</string>
    <string name="dot" translatable="false">.</string>
    <string name="colon" translatable="false">:</string>

    <string name="action_add_player_multi">Add several players</string>
    <string name="action_add_player">Add player</string>
    <string name="action_add_team">Add team</string>
    <string name="action_apply">Apply</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close_panel">Close panel</string>
    <string name="action_clear_panel">Clear panel</string>
    <string name="action_confirm">Confirm action</string>
    <string name="action_confirm_new_game">Start new game?</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_help">Help</string>
    <string name="action_ok" translatable="false">OK</string>
    <string name="action_profiles">Teams</string>
    <string name="action_rate">Rate</string>
    <string name="action_reset">Reset</string>
    <string name="action_results">Results</string>
    <string name="action_save">Save</string>
    <string name="action_save_continue">Save and continue</string>
    <string name="action_save_more">Save and add more</string>
    <string name="action_save_result">Save game result?</string>
    <string name="action_save_teams">Save teams</string>
    <string name="action_select">Select</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_share_via">Share via</string>
    <string name="action_start_camera">Start camera</string>
    <string name="action_whats_new">What new</string>

    <string name="team_home">Home team</string>
    <string name="team_guest">Guest team</string>
    <string name="team_toolbar">Team: %1$s</string>

    <string name="new_game">New game</string>
    <string name="new_game_same_teams">New game with same teams</string>
    <string name="new_game_new_teams">New game with other teams</string>
    <string name="new_game_no_teams">New game without teams</string>
    <string name="new_game_settings_changed">Settings changed. Changes will take effect at the start of a new game.</string>
    <string name="game_end_dialog_neutral">No (Save result)</string>
    <string name="game_end_message">Team %1$s won %2$d-%3$d.</string>

    <string name="save_home_team">Save home team</string>
    <string name="save_guest_team">Save guest team</string>
    <string name="save_home_team_with_name">Save home team (%1$s)</string>
    <string name="save_guest_team_with_name">Save guest team (%1$s)</string>

    <string name="select_team">Select team</string>
    <string name="select_team_selected">Select team: %1$s</string>
    <string name="select_home_team">Select home team</string>
    <string name="select_home_team_selected">Select home team: %1$s</string>
    <string name="select_guest_team">Select guest team</string>
    <string name="select_guest_team_selected">Select guest team: %1$s</string>
    <string name="select_team_already_selected">Team already selected</string>
    <string name="select_team_both_required">Select both teams</string>

    <string name="switch_sides">Switch sides</string>
    <string name="edit">Edit</string>
    <string name="horn">Horn</string>
    <string name="new_period">New period</string>
    <string name="whistle">Whistle</string>

    <string name="dont_ask">Don\'t ask again</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="fiba" translatable="false">FIBA</string>
    <string name="nba" translatable="false">NBA</string>
    <string name="streetball">Streetball</string>

    <string name="final_result">Final</string>
    <string name="team">Team</string>
    <string name="timeout_clock" translatable="false">60.0</string>
    <string name="timeout_title">Timeout</string>
    <string name="shot_time" translatable="false">24</string>
    <string name="main_time" translatable="false">10:00</string>
    <string name="one_zero" translatable="false">0</string>
    <string name="number_one" translatable="false">1</string>
    <string name="quarter_one" translatable="false">Q1</string>
    <string name="two_zeros" translatable="false">00</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus1" translatable="false">+1</string>
    <string name="plus2" translatable="false">+2</string>
    <string name="plus3" translatable="false">+3</string>
    <string name="minus1" translatable="false">-1</string>
    <string name="set_main_time">Set time</string>

    <string name="short_shot_clock" translatable="false">14</string>
    <string name="label_timeouts">timeouts</string>
    <string name="label_timeouts_left">TO left</string>
    <string name="label_timeout_full" translatable="false">full</string>
    <string name="label_timeout_20" translatable="false">:20</string>
    <string name="label_fouls">fouls</string>
    <string name="label_period">period</string>

    <string name="toast_camera_fail">Camera is unavailable</string>
    <string name="toast_confirm_exit">Click again to exit</string>
    <string name="toast_result_delete_error">Failed to delete result (%1$d)</string>
    <string name="toast_select_players">Select active players</string>
    <string name="toast_storage_folder_fail">Failed to create directory %1$s</string>
    <string name="toast_storage_permission_fail">Writing to storage not allowed</string>
    <string name="toast_storage_save_ok">Saved to %1$s</string>
    <string name="toast_storage_save_fail">Can\'t save picture</string>
    <string name="toast_team_saved">Team %1$s saved</string>

    <string name="timeout_format_1">%1$d minutes break</string>
    <string name="timeout_format_2">%1$s %2$d seconds timeout</string>
    <string-array name="timeout_variants">
        <item>2 minutes break</item>
        <item>15 minutes break</item>
        <item>20 seconds timeout</item>
        <item>30 seconds timeout</item>
        <item>60 seconds timeout</item>
        <item>100 seconds timeout</item>
    </string-array>

    <string-array name="new_period_variants">
        <item>Regular period</item>
        <item>Overtime</item>
    </string-array>
    <string name="choose_game">Choose game</string>
    <string name="save_picture">save picture</string>
    <string name="camera_take_picture">Take picture</string>
    <string name="cab_subtitle">Selected %1$d</string>
    <string name="cab_success">Results deleted</string>
    <string name="no_results">No saved games</string>

    <string name="results_detail">Detail:</string>
    <string name="results_players_stats">Players statistics:</string>
    <string name="results_play_by_play">Play-by-play:</string>
    <string name="results_protocol">Protocol:</string>

    <string name="profile_stats">Statistics:</string>
    <string name="profile_players">Players:</string>

    <string name="team_total_games">Total games: %1$d</string>
    <string name="team_wins">Wins: %1$d</string>
    <string name="team_avg_pts">Average points: %1$s</string>
    <string name="team_avg_pts_opp">Opponent average points: %1$s</string>

    <string name="score">Score</string>
    <string name="home_player">Home player</string>
    <string name="guest_player">Guest player</string>
    <string name="game_time">Game time</string>
    <string name="period_time">Period time</string>

    <string name="tie">Score tie</string>
    <string name="lead_changed">Lead changed</string>
    <string name="home_max_lead">Home max lead</string>
    <string name="guest_max_lead">Guest max lead</string>
    <string name="foul">foul</string>
    <string name="quarter">quarter</string>
    <string name="timeout">timeout</string>
    <string name="timeout20">timeout (20 seс)</string>

    <plurals name="points">
        <item quantity="one">%d point</item>
        <item quantity="few">%d points</item>
        <item quantity="many">%d points</item>
        <item quantity="other">%d points</item>
    </plurals>

    <string name="edit_home_name">Enter new home team name</string>
    <string name="edit_guest_name">Enter new guest team name</string>
    <string name="edit_name">Enter name</string>

    <string name="edit_player_dialog_title">Player\'s info</string>
    <string name="edit_player_dialog_name">Name</string>
    <string name="edit_player_dialog_number">Number</string>
    <string name="edit_player_dialog_captain">Captain</string>
    <string name="edit_player_dialog_captain_confirm">Captain already assigned. Replace?</string>
    <string name="edit_player_dialog_number_warning">Number already assigned</string>
    <string name="edit_player_dialog_number_required">Number required</string>
    <string name="edit_player_dialog_error">An error has occurred. Can\'t save player</string>

    <string name="edit_team_dialog_title">Team info</string>
    <string name="edit_team_dialog_name">Name</string>
    <string name="edit_team_dialog_active">Active</string>
    <string name="edit_team_dialog_name_confirm">Name already in use. Continue?</string>
    <string name="edit_team_dialog_name_required">Name required</string>

    <string name="text_number" translatable="false">№</string>
    <string name="text_player">Player</string>
    <string name="text_points_short">P</string>
    <string name="text_points">PTS</string>
    <string name="text_fouls_short">F</string>
    <string name="text_fouls">PF</string>
    <string name="text_or">or</string>

    <string name="sp_no_data">Players are not yet added</string>
    <string name="sp_confirm">Confirm selection</string>
    <string name="sp_few">Too few players (%1$d)</string>
    <string name="sp_many">Too many players (%1$d)</string>
    <string name="sp_player_name">Player №%1$d</string>
    <string name="sp_players_limit">You can add only %1$d players</string>
    <string name="sp_fouls_limit_home">Home player №%1$d (%2$s) reached fouls limit</string>
    <string name="sp_fouls_limit_guest">Guest player №%1$d (%2$s) reached fouls limit</string>
    <string name="sp_no_saved_data">No saved data</string>

    <string name="substitute_dialog_title_home">Select substitute for home team player №%1$d</string>
    <string name="substitute_dialog_title_home0">Select home player</string>
    <string name="substitute_dialog_title_guest">Select substitute for guest team player №%1$d</string>
    <string name="substitute_dialog_title_guest0">Select guest player</string>

    <string name="team_no_selected_create">Select team or click to create</string>
    <string name="team_already_selected">Team already selected</string>
    <string name="team_already_selected_dialog_msg">Press YES to delete all current players data and apply team. Press NO to leave current team.</string>
    <string name="team_few_players_dialog_title">None or few players in team</string>
    <string name="team_few_players_dialog_msg">Press YES to add more players. Press NO to continue with existing players.</string>
    <string name="team_lot_players_dialog_title">Select players for current game</string>

</resources>
