<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/drawer_new_game"
        android:icon="@drawable/ic_action_replay"
        android:title="@string/action_new_game"/>
    <item
        android:id="@+id/drawer_results"
        android:icon="@drawable/ic_action_storage"
        android:title="@string/action_results"/>
    <item
        android:id="@+id/drawer_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/drawer_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/drawer_help"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_help"/>
</menu>
