<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floating_fragment">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/edit_name_margin"
        android:text="@string/select_team"
        android:textSize="@dimen/dialog_title_font_size"
        android:gravity="center"
        />

    <Button
        android:id="@+id/new_game_select_first_team"
        style="?android:attr/buttonBarButtonStyle"
        android:background="@color/floating_fragment_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/edit_name_margin"
        android:text="@string/action_select"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/text_or"
        style="?android:attr/textAppearanceSmall"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_name"
        style="?android:attr/textAppearanceMedium"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="text"
        android:layout_margin="@dimen/edit_name_margin"
        android:maxLength="25"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_apply"
        android:text="@string/action_apply"
        style="?android:attr/buttonBarButtonStyle"
        />

</LinearLayout>