<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="start"
    android:clickable="false"
    android:longClickable="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/profile_player_number"
        style="@style/detailViewTableRowChild"
        android:text="@string/text_number"
        android:layout_weight="1.6"
        />
    <TextView
        android:id="@+id/profile_player_name"
        style="@style/detailViewTableRowChild"
        android:text="@string/text_player"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/profile_player_edit"
        style="@style/detailViewTableRowChildButton"
        android:layout_weight="1.6"
        android:text="@string/edit"/>
</TableRow>