<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_team_dialog_title"
        android:textSize="@dimen/dialog_title_font_size"
        android:gravity="center"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/edit_team_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/edit_name_margin"
            android:inputType="text"
            android:hint="@string/edit_team_dialog_name"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            />

        <Switch
            android:id="@+id/edit_team_active"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/edit_team_dialog_active"
            android:gravity="center|right"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/action_cancel"/>

        <Button
            android:id="@+id/button_custom_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/action_save_more"
            />

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/action_save"
            />

    </LinearLayout>
</LinearLayout>