<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <group
        android:id="@+id/group">
        <item
            android:id="@+id/menu_add"
            android:orderInCategory="1"
            android:icon="@drawable/ic_action_new"
            android:title="@string/save_picture"
            app:showAsAction="ifRoom"
            />
        <item
            android:id="@+id/menu_share"
            android:orderInCategory="2"
            android:icon="@drawable/ic_action_share_light"
            android:title="@string/action_share"
            app:showAsAction="ifRoom"
            />

        <item
            android:id="@+id/menu_delete"
            android:orderInCategory="2"
            android:icon="@drawable/ic_action_discard_light"
            android:title="@string/action_delete"
            app:showAsAction="ifRoom" />
            
    </group>
</menu>