<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="start"
    android:clickable="false"
    android:longClickable="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/results_player_number"
        style="@style/detailViewTableRowChild"
        android:text="@string/text_number"
        android:layout_weight="1.1"
        />
    <TextView
        android:id="@+id/results_player_name"
        style="@style/detailViewTableRowChild"
        android:text="@string/text_name"
        android:layout_weight=".92"
        />
    <TextView
        android:id="@+id/results_player_points"
        style="@style/detailViewTableRowChild"
        android:text="@string/text_points"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/results_player_fouls"
        style="@style/detailViewTableRowChild"
        android:text="@string/text_fouls"
        android:layout_weight="1.1"
        />
</TableRow>