<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/sidePanelToolbar">
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        />
    <ImageButton
        android:id="@+id/left_panel_close"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/side_panel_toolbar_icon_padding"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/action_close_panel"
        android:src="@drawable/ic_action_back"
        android:background="@drawable/side_panel_toolbar_button"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        />
    <ImageButton
        android:id="@+id/left_panel_clear"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/side_panel_toolbar_icon_padding"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/action_close_panel"
        android:src="@drawable/ic_action_discard_light"
        android:background="@drawable/side_panel_toolbar_button"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        />
    <ImageButton
        android:id="@+id/left_panel_add"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/side_panel_toolbar_icon_padding"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/action_add_player"
        android:src="@drawable/ic_action_add_person"
        android:background="@drawable/side_panel_toolbar_button"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        />
    <ImageButton
        android:id="@+id/left_panel_add_auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:padding="@dimen/side_panel_toolbar_icon_padding"
        android:contentDescription="@string/action_add_player_multi"
        android:src="@drawable/ic_action_add_group"
        android:background="@drawable/side_panel_toolbar_button"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        />
    <ToggleButton
        android:id="@+id/left_panel_select_active"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/side_panel_select_padding"
        android:layout_weight="0.9"
        android:textOff="@string/action_select"
        android:textOn="@string/action_apply"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        />

</LinearLayout>